Remove call to JDK methods > 11 in polaris.core.main
The polaris-core module has source and target level = 11.
However since the build requires Java 21+, the code in
main sources makes frequent usage of JDK methods that
were introduced after Java 11, such as:

* `Stream.toList()` (Java 16)
* `List.getFirst()` and `List.getLast()` (Java 21)

This makes the compiled artifact unusable, if the
application is not launched with Java 21+.